...
    "About" : {

    },
    "Access exclusive posts and content from creators you support on Patreon." : {

    },
    "Account" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cuenta"
          }
...
    "Blocking this user will prevent them from interacting with your content or messaging you. You can unblock them later in settings." : {

    },
    "Blurb: %@" : {

    },
    "Body" : {
      "comment" : "A button label that toggles the body tracking mode.",
      "isCommentAutoGenerated" : true
    },
    "Body Tracking" : {
      "comment" : "The title of the debug view that shows ARKit body tracking information.",
      "isCommentAutoGenerated" : true
...
    "Content Ticket" : {

    },
    "Contributors" : {

    },
    "Create" : {

    },
    "Create a group conversation" : {
      "comment" : "A button label that initiates the creation of a group conversation.",
      "isCommentAutoGenerated" : true
    },
...
    "Error: %@" : {

    },
    "EULA Agreement Checkbox" : {

    },
    "Face" : {

    },
    "Face ID Terms & Conditions" : {

    },
    "Face Tracking" : {
...
    "Make sure the other person has Arkavo open and is also searching for connections." : {

    },
    "Make sure this is the person you want to connect with. They will receive a connection request." : {

    },
    "Manage Connected Accounts" : {

    },
    "Manual Connection" : {

    },
    "Map" : {
...
      "comment" : "A label indicating that a contact is currently offline.",
      "isCommentAutoGenerated" : true
    },
    "Offline Mode" : {

    },
    "OK" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "DE ACUERDO"
          }
...
            "state" : "translated",
            "value" : "Políticas"
          }
        }
      }
    },
    "Port" : {

    },
    "Position face in camera" : {
      "comment" : "A description below the ARKit face tracking debug view, instructing the user to position their face in the camera.",
      "isCommentAutoGenerated" : true
    },
...
    "Privacy Policy" : {

    },
    "Processing..." : {

    },
    "Profile" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
          }
...
    "Support features will be available in an upcoming update." : {

    },
    "Support Tiers" : {

    },
    "Supported Creators" : {
      "comment" : "A title for a section in the \"Connected Accounts\" view that lists creators the user supports on Patreon.",
      "isCommentAutoGenerated" : true
    },
    "Tap 'Discover Peers' to find nearby devices." : {

    },
...
